src/main/java/com/example/bank/demo/application/controller/handler/error/enumpackage/ErrorCodeType.java
package com.example.bank.demo.application.controller.handler.error.enumpackage;

public enum ErrorCodeType {
    TECHNICAL,
    FUNCTIONAL;
}
